<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity">

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/selectionInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/attendance_view"
        android:orientation="horizontal"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black">

        <AutoCompleteTextView
            android:id="@+id/attendanceViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/applyBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:fontFamily="@font/regular"
        android:text="@string/select_date"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/ivory"
        android:textSize="18sp"
        app:backgroundTint="@color/secondary" />

    <LinearLayout
        android:id="@+id/viewAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applyBtn"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="3dp">

                <Button
                    android:id="@+id/nameBtn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:padding="0dp"
                    android:text="@string/name"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour1"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour2"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_2"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour3"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_3"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour4"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_4"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour5"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_5"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour6"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_6"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />

                <Button
                    android:id="@+id/hour7"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/light"
                    android:padding="0dp"
                    android:text="@string/_7"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ivory" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/attendanceRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:backgroundTint="@color/ivory"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>